Bug 162405 - Multiple password dialogs + crash in file save dialog with configured OpenPGP key signing key
Summary: Multiple password dialogs + crash in file save dialog with configured OpenPGP...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Sarper Akdemir (allotropia)
URL:
Whiteboard: target:25.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2024-08-09 06:05 UTC by Michael Weghorn
Modified: 2024-09-16 06:33 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Weghorn 2024-08-09 06:05:08 UTC
Steps to reproduce:

1) start Writer
2) In "Tools" -> "Options" -> "User Data" -> "Signing Key", click "Select", then select a (in my case, password-protected, not sure whether it's relevant) OpenPGP key
3) close options dialog
4) Press Ctrl+S to save the current (empty) doc
-> Result: 2 password prompts appear: "Enter password to open: NSS Certificate DB"
5) close the topmost password dialog using its "Cancel" button
-> Crash

Expected results:

* No password dialogs unless a password is actually needed
   * i.e. maybe when actually signing, but not when just opening the password dialog to save a file without even wanting to sign
   * and note that the password dialogs (at least from what their texts say) are not even for the OpenPGP key, but the NSS cert DB that seems unrelated to the configured OpenPGP key
* in case of password dialogs: just a single one, not two
* In any case: no crash

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 4c42b1c21192eb43648452254d172a1bdcc20cb3
CPU threads: 32; OS: Linux 6.9; UI render: default; VCL: gtk3
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: CL threaded
Comment 1 Michael Weghorn 2024-08-09 06:06:22 UTC
Regression from:

commit 426c641976688e3e4d1ce66f76b27ccbd2dca55a
Author: Sarper Akdemir
Date:   Wed Jul 17 12:47:22 2024 +0200

    tdf#159040: add sign with default certificate to save dialog

@Sarper: Could you please take a look?
Comment 2 Michael Weghorn 2024-08-09 06:08:28 UTC
See also discussion in the related tdf#162206.
Comment 3 Commit Notification 2024-09-12 14:42:56 UTC
Sarper Akdemir committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4b399dbfc4c3081174be1703a0c98fec1afd761f

tdf#162405: check if there's a matching singing cert only when saving

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Michael Weghorn 2024-09-16 06:33:20 UTC
Fix verified, thanks!

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 26cc060303b98a64daf2c71457811241dc4a0b45
CPU threads: 32; OS: Linux 6.10; UI render: default; VCL: gtk3
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: CL threaded