tdf#162405: check if there's a matching singing cert only when saving

previously Save as dialog's "Sign with default certificate"
checkbox's senstivity was decided depending on if there was a
matching key.

Doing that forces a dialog pop-up for password protected NSS
databases.

Now if there's a value in
"/org.openoffice.UserProfile/Data/signingkey", the checkbox
is sensitive.

Matching key is checked during save, and reported if it isn't
found & signing failed.

Change-Id: Ia714b70ce6456752200088cc5382ab6374af9587
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173129
Reviewed-by: Sarper Akdemir <sarper.akdemir@allotropia.de>
Tested-by: Jenkins